# AutoZoopla

./: .env.example  .gitignore  CHANGES.md  IDEA.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  sparkle-keygen.yml
docs/superpowers/plans/: 2026-07-22-phase1-ui-modularization.md  2026-07-22-phase2-database-credentials.md  2026-07-22-phase3-packaging-updater.md
docs/superpowers/specs/: 2026-07-21-main-app-ui-redesign-design.md  2026-07-22-ui-modularization-database-packaging-design.md
packaging/: AutoZoopla.spec  Info.plist  README.md  entitlements.plist  make_dmg.sh  make_pkg.sh
packaging/icons/: AutoZoopla.icns
packaging/scripts/: postinstall
src/image_manager/: image_manager_app.py  main.py
src/relister/: cli.py  logging_setup.py
src/relister/browser/: login_guard.py  session.py
src/relister/core/: config.py  paths.py  security.py
src/relister/domain/: accounts.py  models.py
src/relister/gui/: __init__.py  app.py  logging_handler.py  main_window.py  navigation.py  prompt_bridge.py  relist_worker.py  theme.py  updater.py
src/relister/gui/pages/: base_page.py  image_page.py  relist_page.py  settings_page.py
src/relister/gui/services/: images_validator.py  settings_service.py
src/relister/providers/: base.py  factory.py
src/relister/storage/: app_settings.py  credentials.py  database.py  property_images.py
src/relister/workflows/: relist_listing.py
tests/: conftest.py  test_config_migration.py  test_paths.py  test_security.py  test_updater_stub.py  test_version.py
tests/browser/: test_session_encryption.py  test_session_teardown.py
tests/gui/: test_images_validator.py  test_main_window_menu.py  test_main_window_status_feedback.py  test_relist_page_database.py  test_relist_page_status_feedback.py  test_settings_page.py  test_settings_service.py
tests/providers/: test_create_listing_verify.py  test_extract_listing_id.py
tests/storage/: test_app_settings.py  test_credentials.py  test_property_images.py
(+11 files in other folders)
