[project]
name = "property-relister"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PySide6>=6.7",
]

[project.scripts]
relister = "relister.cli:main"
relister-gui = "relister.gui.app:main"
imager = "image_manager.main:main"