[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "property-relister"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PySide6>=6.7",
    "cryptography>=42",
    "keyring>=24",
]

[project.optional-dependencies]
macos = ["pyobjc-core>=10", "pyobjc-framework-Cocoa>=10"]
build = ["pyinstaller>=6"]

[tool.setuptools.dynamic]
version = { attr = "relister.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
relister = "relister.cli:main"
autozoopla = "relister.gui.app:main"
relister-gui = "relister.gui.app:main"
imager = "image_manager.main:main"